--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -7,5 +7,5 @@ db.password=ALEKA678022
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
